[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-persistence-skeleton"
version = "0.1.0"
description = "Skeleton LangGraph agent with persistence primitives"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.6.0"
]

[project.optional-dependencies]
dev = [
  "psycopg[binary]>=3.2",
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
